# DAS-Hoster

./: README.md  index.html  package.json
_mock/: generateIncreasing.py  generateRandom.py  generateSin.py  test.py  数据格式说明.txt
src/: App.tsx  chart.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: run-app.json
src-tauri/src/: core.rs  error.rs  lib.rs  main.rs
