[package]
name = "das"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "das_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
# tauri-plugin-shell = "2.0.0-beta"
serde_json = "1.0"
thiserror = "1.0"
serde ="1"
rayon = "1.8"
rusb = "0.9"
tokio = { version = "1.36", features = ["full"] }
rustfft = "6.2.0"
serialport = "4"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
